Final changes to styling. Correction in footer icons color. Fixing minor spacing problems

--- a/applied-philosophy/styles/site-plan.css
+++ b/applied-philosophy/styles/site-plan.css
@@ -5,7 +5,7 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #FFD100;
+  --primary-color: #e4c44c;
   --secondary-color: #333533;
   --accent1-color: #ec4414;
   --accent2-color: #D6D6D6;
@@ -19,15 +19,15 @@ Fonts are separated by a | */
   --paragraph-font: "Source Sans Pro", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #FFD100;  /* headlines on a white background */ 
+  --headline-color-on-white: #e4c44c;  /* headlines on a white background */ 
   --headline-color-on-color: #333533; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #FFD100; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #e4c44c; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #333533; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #FFD100  ;
-  --nav-link-color: #FFD100;
+  --paragraph-background-color: #e4c44c  ;
+  --nav-link-color: #e4c44c;
   --nav-background-color: #333533;
   --nav-hover-link-color: #333533;
-  --nav-hover-background-color: #FFD100;
+  --nav-hover-background-color: #e4c44c;
 }
 
 
